--- a/unit06_01(mac).ipynb
+++ b/unit06_01(mac).ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "unit06-01(mac).ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
